[package]
name = "planar_convex_hull"
version = "0.1.0"
edition = "2024"
description = "A trait for implementing a planar convex hull algorithm for your own collection type"
readme = "README.md"
license  = "MIT OR Apache-2.0"
repository = "https://github.com/StefanMathis/planar_convex_hull.git"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ordered-float = "3.6.0"
ahash = { version = "0.8", optional = true }
rayon = { version = "1.5", optional = true }
slab = { version = "0.4.8", optional = true }

[features]
default = []
ahash = ["dep:ahash"]
slab = ["dep:slab"]
rayon = ["dep:rayon"]

[dev-dependencies]
nalgebra = { version = "0.32"}
planar_convex_hull = { path = ".", features = ["ahash", "slab", "rayon"] } 